--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="vh-100 d-flex justify-content-center align-items-start flex-wrap">
-  <main class="bg-white mb-5 d-flex flex-column justify-content-start align-items-center">
-    <header class="w-100  d-flex flex-column justify-content-center align-items-center">
-      <img id="illustration" class="w-75" src="images/illustration-woman-online-mobile.svg" alt="">
+<body class="vh-100 d-flex justify-content-center flex-wrap">
+  <main class="bg-white d-flex">
+    
+    <header class="w-100 d-flex">
+      <div class="hide d-flex justify-content-center align-items-center"> 
+      <img id="illustration" class=""  alt="">
+      </div>
+      <img id="cube" class="" alt="">
     </header>
-    <section>
-      <h1 class="text-center pt-5 pb-2">FAQ</h1>
+    
+    <section class="pb-5">
+      <h1 class="pt-5 pb-2">FAQ</h1>
       <details class="border-bottom w-100 p-1 text-left">
         <summary class="py-2">How many team members can I invite?</summary>
         <p class="m-0 pb-2 pe-5">
@@ -42,15 +47,15 @@
       </details>
       <details class="border-bottom w-100 p-1 text-left">
         <summary class="py-2">Can I cancel my subscription?</summary>
-        <p class="m-0 pb-0 pe-5">Yes! Send us a message and we’ll process your request no questions asked.</p>
+        <p class="m-0 pb-2 pe-5">Yes! Send us a message and we’ll process your request no questions asked.</p>
       </details>
-      <details class="border-bottom w-100 pt-1 pb-5 px-1 text-left">
+      <details class="border-bottom w-100 p-1 text-left">
         <summary class="py-2">Do you provide additional support?</summary>
-        <p class="m-0 pb-0 pe-5">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        <p class="m-0 pb-2 pe-5">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
       </details>
     </section>
   </main>
-  <div class="attribution mt-2 p-3 w-100">
+  <div class="attribution mt-1 p-3 w-100">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Noemí Varela</a>
   </div>
