FEM errors in HTML corrected

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     
     <header class="w-100 d-flex">
       <div class="hide d-flex justify-content-center align-items-center"> 
-      <img id="illustration" class=""  alt="">
+      <img id="illustration" class=""  alt="" src="">
       </div>
-      <img id="cube" class="" alt="">
+      <img id="cube" class="" alt="" src="">
     </header>
     
     <section class="pb-5">
@@ -55,10 +55,10 @@
       </details>
     </section>
   </main>
-  <div class="attribution mt-1 p-3 w-100">
+  <footer class="attribution mt-1 p-3 w-100">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Noemí Varela</a>
-  </div>
+  </footer>
 </body>
 
 </html>
