Blank src in image correction

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     
     <header class="w-100 d-flex">
       <div class="hide d-flex justify-content-center align-items-center"> 
-      <img id="illustration" class=""  alt="" src="">
+      <img id="illustration" class=""  alt="" src="data:,">
       </div>
-      <img id="cube" class="" alt="" src="">
+      <img id="cube" class="" alt="" src="data:,">
     </header>
     
     <section class="pb-5">
